--- a/WebGUI/html/widgets/label.html
+++ b/WebGUI/html/widgets/label.html
@@ -45,7 +45,7 @@
 			function getAttributes()
 			{
 				parameters_["class"] = "";
-				parameters_["border"] = "true";
+				parameters_["border"] = "false";
 				parameters_["text"] = "";
 				parameters_["text_position"] = "left";
 				parameters_["font"] = "";
