--- a/WebGUI/html/widgets/thermometer.html
+++ b/WebGUI/html/widgets/thermometer.html
@@ -32,7 +32,7 @@
 			var thermometers = [];
 			var containers = [];
 			var pv_settings_ = [];
-			var parameters_ = {class: "", "show_labels": "true", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey"};
+			var parameters_ = {class: "", "show_labels": "false", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey"};
 
 			//init called once body has loaded
 			function init()
@@ -122,6 +122,7 @@
 									, containers
 									, parameters_["old_value_foreground_color"]
 									, parameters_["old_value_background_color"]
+									, ""
 									, thermometers[pvName]._svg._groups[0][0].parentElement
 									);
 
@@ -193,7 +194,6 @@
 
 	<body onload="Javascript:init()">	
 		<div id="display" width="100%" height="100%">
-
 		</div>
 	</body>
 
