--- a/WebGUI/html/widgets/led.html
+++ b/WebGUI/html/widgets/led.html
@@ -11,10 +11,10 @@
 			.wrapper {
 				display: grid;
 				//grid-template-columns: repeat(2, 1fr);
-				grid-template-columns: repeat(auto-fill,minmax(120px, 1fr));
+				//grid-template-columns: repeat(auto-fill,minmax(120px, 1fr));
 				grid-gap: 0px;
 				//flex-direction: row;
-				grid-auto-rows: minmax(100px, auto);
+				//grid-auto-rows: minmax(100px, auto);
 				//grid-auto-columns: 200px 200px;
 			}
 
@@ -28,7 +28,7 @@
 			var leds = [];
 			var labelContainers = [];
 			var pv_settings_ = [];
-			var parameters_ = {class: "", "show_labels": "true", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey"};
+			var parameters_ = {class: "", "show_labels": "false", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey"};
 
 			/////////////////////////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
