Fixed residuals bugs introduced while resolving conflicts in recent merge

--- a/WebGUI/html/Visualization-complexLayout.html
+++ b/WebGUI/html/Visualization-complexLayout.html
@@ -21,6 +21,8 @@
   <script  src="../js/themeSelector.js"   			                                type="text/javascript"                  ></script>
 
   <script  src="../js/STDLINE.js"   			                                        type="text/javascript"                  ></script>
+  <script  src="../js/Globals.js"   			                                        type="text/javascript"                  ></script>
+  <script  src="../js/DesktopContent.js"   			                                type="text/javascript"                  ></script>
   <script  src="../js/navigatorTools.js"   			                                type="text/javascript"                  ></script>
   <script  src="../js/complexLayout.js"   			                                type="text/javascript"                  ></script>
   <script  src="../js/complexLayoutPersistency.js"   			                        type="text/javascript"                  ></script>
