--- a/WebGUI/html/Visualization-Dario.html
+++ b/WebGUI/html/Visualization-Dario.html
@@ -32,6 +32,7 @@
   <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.js"           type="text/javascript"                  ></script>
   <script  src="../js/themeSelector.js"   			                                type="text/javascript"                  ></script>
 
+  <script  src="../js/DesktopContent.js"   			                                type="text/javascript"                  ></script>
   <script  src="../js/HistogramViewer.js"   			                                type="text/javascript"                  ></script>
  </head>
 
