Fixed bug with Console popping to top on linux Firefox

--- a/WebGUI/html/Console.html
+++ b/WebGUI/html/Console.html
@@ -1189,6 +1189,7 @@
 				{
 					_scrollWithNewChats = (_historyEl.scrollTop >=_historyEl.scrollHeight - _historyEl.offsetHeight - 2);
 					DesktopContent.handleScroll(e);
+							     _userMouseInput = false; //clear
 				}
 			} //end handleUserScroll()
 			
